--- a/css/style.css
+++ b/css/style.css
@@ -4,16 +4,6 @@ body{
   font-family: 'News Cycle', sans-serif;
   margin:0;
 }
-h1{
-  color: steelblue;
-  text-align: center;
-}
-h3{
-  display: inline-block;
-}
-h4{
-  text-align: center;
-}
 a{
   text-decoration: none;
   color: steelblue;
@@ -22,22 +12,15 @@ a:hover{
   text-decoration: underline;
 }
 p{
-  padding: 0 20px; 
+  padding: 0 20px;
 }
 .book{
   font-variant: small-caps;
 }
-
-.content{
-  display: none;
-}
-
 #image-text{
   text-decoration: none;
   font-size: 2em;
 }
-
-.desc more{
-  color: #2C3E50;
+#resume-link{
+  color: white;
 }
-
